# InfotecsInternTest

./: .gitignore  README.md
Program_1/: CMakeLists.txt
Program_1/src/: bufferprocessor.cpp  bufferprocessor.h  inputhandler.cpp  inputhandler.h  main.cpp  safebuffer.h  server.cpp  server.h
Program_2/: CMakeLists.txt
Program_2/src/: client.cpp  client.h  receivehandler.cpp  receivehandler.h
